Initialization of the django project

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,11 @@ practice-app/cmpe352API/venv
 practice-app/cmpe352API/templates/.DS_Store
 practice-app/.DS_Store
 .DS_Store
-.idea
+*.idea
 *.pyc
+
+
+# Backend ignore files
+Projects/Backend/venv
+*.sqlite3
+Projects/Backend/.vscode
