Initialized User-Product tables

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ practice-app/.DS_Store
 Projects/Backend/venv
 *.sqlite3
 Projects/Backend/.vscode
+Projects/Backend/src/user/migrations
+Projects/Backend/src/product/migrations
