--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ practice-app/.DS_Store
 
 # Backend ignore files
 Projects/Backend/venv
+Projects/Backend/src/venv
 *.sqlite3
 Projects/Backend/.vscode
 Projects/Backend/src/*/migrations
