--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,6 @@ practice-app/.DS_Store
 Projects/Backend/venv
 Projects/Backend/src/venv
 Projects/Backend/.vscode
-Projects/Backend/src/.vscode
+Projects/Backend/src/.vscode/
 Projects/Backend/src/*/migrations
 *.sqlite3
