--- a/Projects/Frontend/bazaar-frontend/package.json
+++ b/Projects/Frontend/bazaar-frontend/package.json
@@ -19,6 +19,7 @@
     "react-google-button": "^0.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "sfcookies": "^1.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
