docker v6, email verification is available

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ Projects/Backend/src/.vscode/
 Projects/Backend/src/*/migrations
 *.sqlite3
 Projects/Backend/src/api/static/
+Projects/Backend/src/pictures/
