--- a/Projects/Frontend/bazaar-frontend/package.json
+++ b/Projects/Frontend/bazaar-frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
