--- a/Projects/Frontend/bazaar-frontend/package.json
+++ b/Projects/Frontend/bazaar-frontend/package.json
@@ -12,16 +12,20 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "bootstrap-sass": "^3.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-data-table-component": "^6.11.6",
     "react-dom": "^17.0.1",
     "react-google-button": "^0.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "sfcookies": "^1.0.2",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
