--- a/Projects/Mobile/Bazaar-iOS/Podfile
+++ b/Projects/Mobile/Bazaar-iOS/Podfile
@@ -7,6 +7,7 @@ target 'Bazaar-iOS' do
 
   # Pods for Bazaar-iOS
   pod 'GoogleSignIn'
+  pod 'MARKRangeSlider'
 
   target 'Bazaar-iOSTests' do
     inherit! :search_paths
