sorting and filtering completed
sorting and filtering is completed. added DropDown and MarkRangeSlider pods.

--- a/Projects/Mobile/Bazaar-iOS/Podfile
+++ b/Projects/Mobile/Bazaar-iOS/Podfile
@@ -8,6 +8,7 @@ target 'Bazaar-iOS' do
   # Pods for Bazaar-iOS
   pod 'GoogleSignIn'
   pod 'MARKRangeSlider'
+  pod 'DropDown'
 
   target 'Bazaar-iOSTests' do
     inherit! :search_paths
