--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ Projects/Backend/src/*/migrations
 Projects/Backend/src/api/static/
 Projects/Backend/src/pictures/
 Projects/Backend/src/media/
+Projects/Frontend/bazaar-frontend/.eslintcache
