--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ Projects/Backend/src/api/static/
 Projects/Backend/src/pictures/
 Projects/Backend/src/media/
 Projects/Frontend/bazaar-frontend/.eslintcache
+Projects/Frontend/bazaar-frontend/debug.log
