--- a/Projects/Frontend/bazaar-frontend/package.json
+++ b/Projects/Frontend/bazaar-frontend/package.json
@@ -18,6 +18,8 @@
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-country-region-selector": "^3.0.2",
+    "react-credit-cards": "^0.8.3",
     "react-data-table-component": "^6.11.6",
     "react-dom": "^17.0.1",
     "react-google-button": "^0.7.1",
