--- a/Projects/Frontend/bazaar-frontend/Dockerfile
+++ b/Projects/Frontend/bazaar-frontend/Dockerfile
@@ -1,7 +1,6 @@
-FROM node:17.0.1
+FROM node
 WORKDIR "/app"
 
-COPY package.json .
-RUN npm install
 COPY . .
-CMD ["npm", "start"]
+RUN yarn
+CMD ["yarn", "start"]
