--- a/Projects/Backend/src/requirements.txt
+++ b/Projects/Backend/src/requirements.txt
@@ -6,7 +6,7 @@ django-cors-headers==3.5.0
 djangorestframework==3.12.2
 idna==2.10
 Pillow==8.1.1
-Pygments==2.7.2
+Pygments>=2.7.4
 pytz==2020.4
 requests==2.25.1
 sqlparse==0.4.1
